8285710: miscalculation of G1CardSetAllocator wasted memory size